Reuploading my EDA

--- a/Data Cleaning and Visualization/Cleaning_and_Visualization1.ipynb
+++ b/Data Cleaning and Visualization/Cleaning_and_Visualization1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "id": "a204a571-3ec0-457e-a2e6-572018b6c6be",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 3,
    "id": "fee19e64-01af-4469-bfef-79d11a3b2c26",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "id": "f9df4ae9-4be4-4f75-88fd-32d77644cc6f",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "id": "b0bfb07f-8399-46fd-8f0e-7bce6991be65",
    "metadata": {},
    "outputs": [
@@ -86,20 +86,20 @@
     {
      "data": {
       "text/plain": [
-       "122                                                       \n",
-       "10713                                                     \n",
-       "1963     Valentino Go-Cushion Foundation in Pink #valen...\n",
-       "18820                                                     \n",
-       "7981                                                      \n",
-       "18025                                                     \n",
-       "4883                                                      \n",
-       "18958    Products: numbuzin no.5+ serum and toner\\r\\n*T...\n",
-       "17696                                                     \n",
-       "3544                                                      \n",
+       "1695                                                      \n",
+       "16462                                                     \n",
+       "8275     #beautyofjoseon #greenplumtoner #refreshington...\n",
+       "10904                                                     \n",
+       "6618                                                      \n",
+       "2008     Putting together an affordable night out look ...\n",
+       "6940                                                      \n",
+       "18813                                                     \n",
+       "1583     👌🏻\\r\\n \\r\\n#dupe #makeupdupe #affordablemakeup...\n",
+       "9482                                                      \n",
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "id": "1ae1dec6-487f-45be-9496-fb19af825df5",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "id": "3e264701-5fcf-4d1f-b764-a1dbe7ec2c44",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "id": "6cd3b8fa-84fd-4d7e-a595-f23c0a58b749",
    "metadata": {},
    "outputs": [],
@@ -238,27 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "id": "34c498d3-5a42-4116-8505-a54abcbc7407",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7330      59.0\n",
-       "11916     25.0\n",
-       "3784      13.0\n",
-       "12075    111.0\n",
-       "1697      16.0\n",
-       "7020      55.0\n",
-       "18887     36.0\n",
-       "14457     37.0\n",
-       "3232      41.0\n",
-       "10140     47.0\n",
+       "10637    57.0\n",
+       "13863    60.0\n",
+       "6672     44.0\n",
+       "1302     16.0\n",
+       "14458    55.0\n",
+       "16462    37.0\n",
+       "2782     59.0\n",
+       "11859    37.0\n",
+       "12154    60.0\n",
+       "19050    18.0\n",
        "Name: duration in seconds, dtype: float64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "id": "61dc9907-bfda-4e56-a25f-323e9fe2c690",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "id": "83792a2a-f011-4f2c-ac56-cd95e8a0cedb",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 12,
    "id": "c332ea22-bd75-4fc6-86f8-31b8ffdda481",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "Name: datetime date, Length: 17776, dtype: datetime64[ns, UTC]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 13,
    "id": "43362f1e-6368-49b7-9302-953d2e670be3",
    "metadata": {},
    "outputs": [],
@@ -415,27 +415,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 62,
    "id": "75ff50ae-46ed-4e23-b4d3-7c261af3d5ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                                         \n",
+       "1                                                         \n",
+       "2                                                         \n",
+       "3                                                         \n",
+       "4                                                         \n",
+       "                               ...                        \n",
+       "17771    💕💗💖\\r\\n\\r\\n#dupe #makeupdupe #affordablemakeup...\n",
+       "17772    It’s soooo good! 🤩\\r\\n\\r\\n#beautyguru #dupe #m...\n",
+       "17773    🙊🛑✋🏻 \\r\\n\\r\\n#dupe #makeupdupe #affordablemake...\n",
+       "17774    #dupe #makeupdupe #affordablemakeup #affordabl...\n",
+       "17775    🧁🎂🥂 \\r\\n\\r\\n#dupe #makeupdupe #affordablemakeu...\n",
+       "Name: text, Length: 17606, dtype: object"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Okay, now we look at the data before 3/1\n",
     "\n",
     "df2 = df2.reset_index(drop=True) #Resetting the indexing of the rows to default \n",
     "df3 = df2.loc[ df2[\"datetime date\"] < march_1_2025 ]\n",
     "\n",
-    "df3.to_csv(\"cleaner_transformed_data_Rachael.csv\")\n",
+    "df3.to_csv(\"cleaner_transformed_data_Rachael2.csv\")\n",
     "\n",
     "#Okay, now we split the data\n",
     "\n",
     "df_before = df3.loc[ df3[\"datetime date\"] < oct_15_2024 ] \n",
-    "df_after = df3.loc[ df3[\"datetime date\"] > oct_15_2024 ] "
+    "df_after = df3.loc[ df3[\"datetime date\"] > oct_15_2024 ] \n",
+    "\n",
+    "df3[\"text\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 15,
    "id": "0a2aa003-a389-44d2-b40c-a7b0fc3fc7e7",
    "metadata": {},
    "outputs": [
@@ -474,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "id": "fd4dae06-924e-441d-a717-edeb0b9f1428",
    "metadata": {},
    "outputs": [
@@ -504,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 17,
    "id": "ff2e5b52-cdf7-4cef-8908-047f8c90ef1b",
    "metadata": {},
    "outputs": [
@@ -525,7 +549,7 @@
        "Name: duration ind, Length: 5852, dtype: object"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 18,
    "id": "df504428-1941-4e2f-a6dc-1c0e2264b3ee",
    "metadata": {},
    "outputs": [
@@ -575,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 19,
    "id": "b6659d0e-34dc-41cc-8af2-b9d7a1af873e",
    "metadata": {},
    "outputs": [
@@ -603,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 20,
    "id": "0cc6d36d-56ba-4323-a687-9c43fe587fb1",
    "metadata": {},
    "outputs": [
@@ -645,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 21,
    "id": "474dba31-f676-457f-9b5b-f2df76b09117",
    "metadata": {},
    "outputs": [
@@ -666,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 22,
    "id": "877f4c88-c097-46da-bfa0-c1bd812a672a",
    "metadata": {},
    "outputs": [
@@ -685,7 +709,7 @@
        "(4409, 24)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 23,
    "id": "5d6a03cd-62fb-4352-82ff-3e9761c556c1",
    "metadata": {},
    "outputs": [
@@ -747,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 24,
    "id": "3cfd02e7-6f9d-4164-b882-9d34e4ee418c",
    "metadata": {},
    "outputs": [
@@ -763,7 +787,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 25,
    "id": "a7f1e1b3-786f-4bfb-b796-b5cce61c8fc7",
    "metadata": {},
    "outputs": [
@@ -805,7 +829,7 @@
        "(51, 24)"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 26,
    "id": "b1e3f09c-3415-455c-99df-5048fcfeeb4e",
    "metadata": {},
    "outputs": [
@@ -862,7 +886,7 @@
        "(56, 25)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 27,
    "id": "2b15df31-27ef-46c3-8144-aa10bedd963e",
    "metadata": {},
    "outputs": [
@@ -911,7 +935,7 @@
        "(16, 26)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 28,
    "id": "d48689d1-02a4-46e5-b431-72f7f77247c7",
    "metadata": {},
    "outputs": [
@@ -960,7 +984,7 @@
        "(4735, 26)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
