feat: eda on ad videos and duration of videos

--- a/Data Cleaning and Visualization/eda_video_len_and_ad.ipynb
+++ b/Data Cleaning and Visualization/eda_video_len_and_ad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +288,22 @@
     "    print(f'T-test for {metric}: t-statistic = {t_stat}, p-value = {p_value}')\n",
     "    t_stat_text, p_value_text = stats.ttest_ind(subdf.loc[subdf['hasAdinText'] == 1, metric], subdf.loc[subdf['hasAdinText'] == 0, metric], equal_var=False)\n",
     "    print(f'T-test for {metric} by Ad in Text: t-statistic = {t_stat_text}, p-value = {p_value_text}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Engagement on videos with ads vs without ads\n",
+    "- When the title of a video contains any hashtag related to ads, the views and likes don't differ compared to video with titles not containing ads\n",
+    "- One key difference is in the number of comments that are left on videos with title containing hashtags related to ads. The comments drop significantly\n",
+    "- When the text of a video contains any hashtag related to ads, all metrics of engagement drop significantly.\n",
+    "\n",
+    "This suggests that title of a video containing the information of it being an ad doesn't affect viewership or likability of the video but people participate less actively, i.e., they tend to not leave comments on such videos\n",
+    "\n",
+    "It also suggests that the text of a video containing ad related hashtags negatively affects engagement, suggesting people are averse to promotional content.\n",
+    "\n",
+    "From this we can also say that the title is of less importance when it comes to engagement with a ad video or otherwise."
    ]
   },
   {
