Checking for Normality

--- a/Data Cleaning and Visualization/Correcting Dates.ipynb
+++ b/Data Cleaning and Visualization/Correcting Dates.ipynb
@@ -82,8 +82,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "3798fba5-01c6-492b-ad63-255b19aa7064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['channelDescription', 'channelJoinedDate', 'channelTotalVideos',\n",
+       "       'channelTotalViews', 'channelUsername', 'commentsCount', 'date',\n",
+       "       'duration', 'id', 'isChannelVerified', 'likes', 'numberOfSubscribers',\n",
+       "       'order', 'text', 'title', 'url', 'viewCount', 'likes_per_subscriber',\n",
+       "       'comments_per_subscriber', 'views_per_subscriber',\n",
+       "       'duration_in_seconds', 'datetime_date', 'hashtags', 'comm_to_views',\n",
+       "       'likes_to_views', 'popular_brand', 'has_title_affiliate',\n",
+       "       'has_description_affiliate', 'has_channel_description_affiliate',\n",
+       "       'has_any_affiliate', 'has_business_inquiry',\n",
+       "       'engagement_per_subscriber'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "11b68c77-e52a-45a4-a091-2800de5843c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data_no_spaces_all_features_correct_dates.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a8205c-cf15-422c-9242-454cf84db136",
    "metadata": {},
    "outputs": [],
    "source": []
