doing a lot of boring stuff to get all features into a single data set ready for modelling

--- a/Modelling/Removing Early Dates.ipynb
+++ b/Modelling/Removing Early Dates.ipynb
@@ -22,21 +22,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 28,
    "id": "1d398fcb-cc13-4ad3-893d-8a8d2e19c8be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "15041    0\n",
+       "15042    0\n",
+       "15043    0\n",
+       "15044    0\n",
+       "15045    0\n",
+       "Name: hasAdinTitle, Length: 15046, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\arubi\\Desktop\\datascience2025\\erdos-uncreatives\\Data Cleaning and Visualization\\data_no_spaces_all_features_correct_dates.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\arubi\\Desktop\\datascience2025\\erdos-uncreatives\\Data Cleaning and Visualization\\correct_dates_keywords_primetime.csv\")\n",
     "\n",
     "march_1_2025_str = '2025-03-01T00:00:00.000Z'\n",
     "march_1_2025 = datetime.datetime.fromisoformat(march_1_2025_str) #This is an \"aware\" datetime object in the same format as the others \n",
     "\n",
-    "df[\"datetime_date\"] = df[\"datetime_date\"].apply(datetime.datetime.fromisoformat) #changes from string to datetime object using vectorized code "
+    "df[\"datetime_date\"] = df[\"datetime_date\"].apply(datetime.datetime.fromisoformat) #changes from string to datetime object using vectorized code \n",
+    "\n",
+    "\n",
+    "df['hasAdinTitle'] = df['title'].str.lower().str.contains('ad|sponsored|collaboration|promo|partner|affiliate|paid|gift', case=False, na=False).astype(int)\n",
+    "df['hasAdinText'] = df['text'].str.lower().str.contains('ad|sponsored|collaboration|promo|partner|affiliate|paid|gift', case=False, na=False).astype(int)\n",
+    "df["
    ]
   },
   {
@@ -49,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "id": "75ddb3cc-c5c2-4a7c-b378-436bd733a819",
    "metadata": {},
    "outputs": [
@@ -171,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "id": "c75ac46c-ddec-4fe4-9970-3a0d705dba00",
    "metadata": {},
    "outputs": [],
@@ -181,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 9,
    "id": "13ced328-49c1-445e-96c9-1b9e745c2355",
    "metadata": {},
    "outputs": [
@@ -221,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 10,
    "id": "ada42495-a8aa-4b0e-9496-b4b2cf37b906",
    "metadata": {},
    "outputs": [
@@ -249,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "id": "06f0e33e-bbd5-4f4d-b445-808e8d4d8f87",
    "metadata": {},
    "outputs": [
@@ -259,7 +286,7 @@
        "np.float64(181734.74856885787)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "id": "86ab744d-2e70-4ca9-8142-7ad9c415059f",
    "metadata": {},
    "outputs": [
@@ -463,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "16d58f13-6958-4671-ae26-41d2d1789acd",
    "metadata": {},
    "outputs": [],
@@ -473,13 +500,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "id": "313d0f39-77f7-4452-892d-6b892fb90e5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "final_df = df.loc[ (df[\"datetime_date\"] <= (march_1_2025 - datetime.timedelta(days = 8*7)))]\n",
     "final_df[\"datetime_date\"]\n",
+    "\n",
+    "#We are missing the ad features from this data set. We are adding them here at the last minute. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "final_df.to_csv(\"no_early_dates.csv\")"
    ]
   },
