--- a/Data Cleaning and Visualization/eda_video_len_and_ad.ipynb
+++ b/Data Cleaning and Visualization/eda_video_len_and_ad.ipynb
@@ -978,7 +978,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "erdos_spring_2025",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -992,9 +992,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
