Some basic set up

--- a/Modelling/Engagement_models.ipynb
+++ b/Modelling/Engagement_models.ipynb
@@ -5,13 +5,13 @@
    "id": "1f93ffa0-b4ff-4b12-81f2-949ebad42546",
    "metadata": {},
    "source": [
-    "In this notebook, we will create and compare several models. Our target feature for this notebooks is (Likes+Comments/Views)\n",
-    "which we will call \"engagement\". "
+    "In this notebook, we will create and compare several models. Our target feature for this notebooks is (Likes+Comments/(Views+1))\n",
+    "which we will call \"engagement\". We have added 1 to the denonimator just to ensure we never divide by zero. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "98f96210-9b6b-4589-ae6a-be7b219121e9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,20 @@
     "\n",
     "df = pd.read_csv(r\"all_features_final.csv\")\n",
     "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
-    "df = df[features]"
+    "\n",
+    "#Create the target column $y$ here \n",
+    "\n",
+    "df = df[ features + \"y\" ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea5e3ea-744f-4ea3-a082-27bb47cd1ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!"
    ]
   },
   {
@@ -30,7 +43,69 @@
    "id": "13d86438-aae7-4433-8644-e26d56daae6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Create the baseline model here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc720b8d-d4a5-41ed-8e0c-cce7dfb81885",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creat the basic linear regression model here "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e891559-d14a-47a2-af18-a5363af7e60b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the basic linear regression model here with lasso regression. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39edb992-3082-4415-a155-dbd36c360774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model whose features include all interaction terms "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b43452cc-12d0-4ac3-882b-d7942693d0e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model with all interaction terms and lasso regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e6b6f89-6217-41e4-a47e-b0f06f1ec11b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do cross-validation to compare all models "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dd1bfe5-da0d-4074-969c-8aacea12ba04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Final interpretation "
+   ]
   }
  ],
  "metadata": {
