--- a/Modelling/Views_models.ipynb
+++ b/Modelling/Views_models.ipynb
@@ -71,7 +71,14 @@
    "source": [
     "features = [\"popular_brand\", \"has_any_affiliate\", \"product\", \"budget\", \"self_ref\", \"acronym\", \"korean\", \"speed\", \"skills/teach\", \"skincare\", \"comparing_products\", \"prime_hour\", \"hashtags\", \"hasAdinTitle\", \"hasAdinText\"]\n",
     "\n",
-    "df = df[features]"
+    "#Create the target column $y$ here \n",
+    "\n",
+    "df = df[ features + \"y\" ] \n",
+    "\n",
+    "#Create the target column $y$ here:\n",
+    "\n",
+    "#We don't need a lot of the noise columns\n",
+    "df = df[ features + \"y\" ] "
    ]
   },
   {
@@ -80,7 +87,79 @@
    "id": "b2dff4f7-65bd-4f28-abfc-833d304078b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Do an 80-20 Train Test Split Here. Never ever touch the testing set please!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6428dbc1-d78e-47bb-9159-b42eea6a20d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the baseline model here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a9c1ca4-fcb4-4c9c-a0f4-5e8990aab033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creat the basic linear regression model here "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d31581e-3aa9-4b52-b749-9993cf3299f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the basic linear regression model here with lasso regression. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28f85933-593b-4710-844a-0a1c7bc5436d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model whose features include all interaction terms "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12a5133-9cea-407b-b0db-d0b9503d0279",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a model with all interaction terms and lasso regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a48034c-5135-4a52-a6f3-57bb5d03c11b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Do cross-validation to compare all models "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36e385db-e0eb-4064-8ade-eb7c7ebd404e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Final interpretation "
+   ]
   }
  ],
  "metadata": {
